// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDraftOrderLineItemDiscountedPrice() should return the line item's discounted price when there is an applied discount 1`] = `0.5`;

exports[`getDraftOrderLineItemDiscountedPrice() should return the line item's price when there is no applied discount 1`] = `1`;

exports[`getDraftOrderLineItemTotal() should return the line item's total price 1`] = `"2.00"`;

exports[`getDraftOrderTotalLineItemsPrice() should return all the line items' total price 1`] = `5`;

exports[`getDraftOrderTotalLineItemsPrice() should return the correct value without rounding errors 1`] = `"32.99"`;

exports[`getOrderLineItemDiscountedPrice() should return the line item's price when there is a discount 1`] = `0.5`;

exports[`getOrderLineItemDiscountedPrice() should return the line item's price when there is no discount 1`] = `1`;

exports[`getOrderLineItemDiscountedPrice() should return the line item's price when there is no quantity 1`] = `0`;

exports[`initLineItemAppliedDiscount() should return the applied discount with fixed amount 1`] = `
Immutable.Map {
  "title": "",
  "description": "",
  "value_type": "fixed_amount",
  "value": "0.10",
  "amount": "0.20",
}
`;

exports[`initLineItemAppliedDiscount() should return the applied discount with percentage amount 1`] = `
Immutable.Map {
  "title": "",
  "description": "",
  "value_type": "percentage",
  "value": "50.00",
  "amount": "0.50",
}
`;
